--- a/client/src/styleComponents/Card.module.css
+++ b/client/src/styleComponents/Card.module.css
@@ -1,25 +1,34 @@
 
 
-.cont {
+/* .cont {
     width: 170px;
     height: 150px;
-}
+} */
 .card {
-    width: 100px;
-    height: 80px;
+    background-color:rgba(24, 70, 156, 0.493);
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
 }
 
+.flag {
+    width: 200px;
+    height: 100px;
+}
 
+.detail {
+    width: 350px;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    /* margin-top:0px;
+    margin-bottom:0px; */
+}
 
-
-
-
-
-
-
-
-
-
+.detail p{
+    margin-right: 10px;
+}
 
 /* esto es de la tarea del clima
 
