--- a/client/src/styleComponents/ActivityCreate.module.css
+++ b/client/src/styleComponents/ActivityCreate.module.css
@@ -1,40 +1,89 @@
+@font-face{
+    font-family: 'Maler';
+    /* src: url(../../fonts/brankovic.ttf); */
+    /* src: url(../fonts/ConcertOne-Regular.ttf); */
+    src: url(../fonts/Hand_Of_Sean_Demo.ttf);
+}
+.contenedor {
+    display : flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    /* background-position: center center;
+    background-size: cover; */
+    height: 100vh;
+    background: rgb(19,94,233);
+    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
+}
+
 .cont {
-    background-color: #501e1e63;
-    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background: rgb(238,174,202);
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,165,233,1) 100%);
+    border-radius: 10px;
+    border: 1px solid blue;
     height:500px;
-    width: 1000px;
-    
+    width: 600px;    
 }
 .form {
     display: flex;
     flex-direction: column;
-    padding-top: 20px;
-    font-size: 30px;
+    align-items: flex-start;
+    padding-top: 30px;
+    font-size: 15px;
+}
+.select {
+    font-family: cursive;
+    
+}
+.selectCountry {
+    font-family: cursive;
+    width: 230px;
 }
 
 .form input {
+    font-family: cursive; 
     height: 30px;
-    width:300px
+    width:250px
 }
 
 .item {
-    display: flex;
     margin-bottom: 20px;
 }
 
 .item label {
-    flex: 0 0 90px;
-    text-align: right;
-    margin-right: 30px;
+    font-family: 'Maler';
+    font-weight: 400;
+    margin-right: 20px;
+    margin-left: 100px;
 }
 
-.item input {
-    
-    margin-left: 10px;
-    margin-right: 30px;
-    border: 1px solid #b1a1a1;
-    flex: 1;
-    /* padding:5px;
-    font-size: 15px;
-    font-size: large; */
+/* .item input {
+
+} */
+
+.btn {
+    font-family: 'Maler';
+    padding: 3px 0px;
+    margin-top: 20px;
+    margin-left: 250px;
+    width: 100px;
+    /* font-weight: 700; */
+    color: rgb(173, 247, 243)
+}
+.btn:hover {
+    color: rgb(12, 1, 1);
+    /* background-color: rgb(19,94,233) */
+    /* background: rgb(131,58,180);
+background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(32,29,253,1) 48%, rgba(252,176,69,1) 100%); */
+background: rgb(131,58,180);
+background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(32,29,253,1) 100%, rgba(252,176,69,1) 100%);
+} 
+
+.link {
+    font-family: 'Maler';
+    font-weight: 700;
+    font-size: 22px;
 }
