--- a/client/src/styleComponents/Cards.module.css
+++ b/client/src/styleComponents/Cards.module.css
@@ -2,7 +2,8 @@
 
 .cnt{
 
-     margin-top: 10px;
+     margin: 20px;
+     /* margin-top: 10px; */
     display: grid;
     display: grid; 
     grid-template-columns: 1fr 1fr 1fr; 
