--- a/client/src/styleComponents/Detail.module.css
+++ b/client/src/styleComponents/Detail.module.css
@@ -10,24 +10,28 @@
     align-items: center;
 }
 .card {
+    border-style: inset ;
+    /* border: 3px solid lightblue; */
+    border-radius: 10px;
     background-color:rgba(24, 70, 156, 0.493);
     display: flex;
     flex-direction: row;
-    /* flex-direction:column; */
     justify-content: center;
     align-items: center;
     margin-top: 30px;
     margin-bottom: 30px;
-    /* width: 400px; */
-    /* color: rgb(0, 0, 0); */
+
 }
 
-.flag {    
+
+
+.flag {  
     width: 300px;
     height: 200px;
     padding-right: 30px;
     padding-left: 20px;
 }
+
 
 .line {
     display: flex;
@@ -41,24 +45,18 @@
 
 .activities {
     color: rgb(50, 151, 3);
-    /* background-color: rgba(148, 151, 3, 0.377) */
     margin-bottom: 10px;
     border-bottom: 3px solid;
 }
-/* .line p {
-    margin-bottom: 0px;
-    padding-bottom: 2px;
-}
-.line h4 {
-    margin-bottom: 0px;
-    padding-bottom: 2px;
-}
-.line h3 {
-    margin-bottom: 0px;
-    padding-bottom: 2px;
-} */
+
 
 .back {
-    background-color: rgba(20, 20, 20, 0.753);
+    border-radius: 10px;
+    /* background-color: rgba(20, 20, 20, 0.753); */
+    background-color:rgba(2, 23, 61, 0.568);
     width: 100px;
+}
+.back:hover {
+    
+    border-inline-style: solid;
 }
