--- a/client/src/styleComponents/Home.module.css
+++ b/client/src/styleComponents/Home.module.css
@@ -4,5 +4,5 @@
     max-width: 100%;
     background-position: center center;
     background-size: cover;
-    height: 100%;
+    min-height: 100vh;
 }
