--- a/client/src/styleComponents/Menu.module.css
+++ b/client/src/styleComponents/Menu.module.css
@@ -1,5 +1,12 @@
+
+
 .cont{
-    background-color: rgba(19, 94, 233, 0.822);
+  
+    background: rgb(19,94,233);
+    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
+    /* background-color: rgba(19, 94, 233, 0.822); */
+    /* background: rgb(87,40,119);
+background: radial-gradient(circle, rgba(87,40,119,1) 0%, rgba(0,0,6,1) 100%, rgba(131,252,69,1) 100%); */
     height: 40px;
    padding: 10px;
    display: flex;
@@ -11,9 +18,9 @@
 
 .cont div{
     margin-left: 5px;
-
+   
 }
 select{
-    color: rgb(173, 247, 243)
-    
+    color: rgb(173, 247, 243);
+    font-family: cursive;
 }
