--- a/client/src/styleComponents/NavBar.module.css
+++ b/client/src/styleComponents/NavBar.module.css
@@ -1,18 +1,29 @@
-
+@font-face{
+    font-family: 'Maler';
+    /* src: url(../../fonts/brankovic.ttf); */
+    /* src: url(../fonts/ConcertOne-Regular.ttf); */
+    src: url(../fonts/Hand_Of_Sean_Demo.ttf);
+}
 
 .cont{
-    background-color: rgba(19, 94, 233, 0.822);
+    background: rgb(19,94,233);
+    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
+    /* background-color: rgba(19, 94, 233, 0.822);     */
+    /* background: rgb(87,40,119);
+    background: radial-gradient(circle, rgba(87,40,119,1) 0%, rgba(0,0,6,1) 100%, rgba(131,252,69,1) 100%); */
     height: 40px;
    padding: 10px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-top: 5px;
-   
+  
 }
 .title{
     color: rgb(173, 247, 243);
+    font-family: 'Maler';
 }
+
 .input{
    width: 400px;
    height: 25px;
@@ -21,28 +32,38 @@
 
 }
 .btn{
+    font-family: cursive;
+    font-size: 17px;
     border-radius: 5px;
-    background-color: rgb(173, 247, 243);
+    /* background-color: rgb(173, 247, 243); */
     /* background-color: rgba(41, 40, 43, 0.335); */
+    background: rgb(19,94,233);
+    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
     color:rgb(20, 12, 134);
     width: 100px;
     height: 30px;
     /* margin-right: 20px; */
-    font-weight: 900;
+    font-weight: 700;
     border-block-end-width: 3px;
     /* margin-left: 50px; */
        
 }
 .btn:hover{
     color: white;
-    background-color:rgb(43, 42, 42); 
+    background: rgb(87,40,119);
+background: radial-gradient(circle, rgba(87,40,119,1) 0%, rgba(0,0,6,1) 100%, rgba(131,252,69,1) 100%);
 
 
  } 
 /* background-color: rgba(51, 3, 128, 0); transparente */
 .btn2{
+    margin-left:2px;
+    font-family: cursive;
+    font-size: 17px;
     border-radius: 5px;
-    background-color: rgb(173, 247, 243);
+    /* background-color: rgb(173, 247, 243); */
+    background: rgb(19,94,233);
+    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
     color:rgb(20, 12, 134);
     width: 100px;
     height: 30px;
@@ -52,17 +73,18 @@
 }
 .btn2:hover{
     color: white;
-    background-color:rgb(43, 42, 42); 
+    /* background-color:rgb(43, 42, 42);  */
+    background: rgb(87,40,119);
+background: radial-gradient(circle, rgba(87,40,119,1) 0%, rgba(0,0,6,1) 100%, rgba(131,252,69,1) 100%);
 
-
- } 
+} 
 
  
 .link{
-    
-font-size: 25px;
-/* color: rgb(5, 12, 12); 
-text-decoration: none;  */
+
+    font-family: 'Maler';
+    font-size: 25px;
+    font-weight: 900;
     
 } 
 .input {
