--- a/client/src/styleComponents/Detail.module.css
+++ b/client/src/styleComponents/Detail.module.css
@@ -24,14 +24,17 @@
     /* background-color:rgba(24, 70, 156, 0.493); */
     /* background: rgb(87,40,119);
     background: radial-gradient(circle, rgba(87,40,119,1) 28%, rgba(0,0,6,1) 100%, rgba(131,252,69,1) 100%); */
-    background: rgb(19,94,233);
-    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
+    /* background: rgb(19,94,233);
+    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%); */
+    background: rgb(52,49,54);
+    background: radial-gradient(circle, rgba(52,49,54,1) 0%, rgba(0,0,8,1) 100%);
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin-top: 30px;
     margin-bottom: 30px;
+    color: #fff
     
 
 }
