--- a/client/src/styleComponents/Card.module.css
+++ b/client/src/styleComponents/Card.module.css
@@ -1,28 +1,27 @@
-
-
-/* .cont {
-    width: 170px;
-    height: 150px;
-} */
+@font-face{
+    font-family: 'Maler';
+    /* src: url(../../fonts/brankovic.ttf); */
+    /* src: url(../fonts/ConcertOne-Regular.ttf); */
+    src: url(../fonts/Hand_Of_Sean_Demo.ttf);
+}
 .card {
     border: 1px solid blue;
     border-radius: 5px;
     /* background-color:rgba(0, 69, 230, 0.116); */
     /* background: rgb(19,94,233);
     background: radial-gradient(circle, rgba(19, 94, 233, 0.26) 44%, rgba(6, 50, 226, 0.253) 100%); */
-    background: rgb(19,94,233);
-    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
+    /* background: rgb(19,94,233);
+    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%); */
+    background: rgb(47,232,233);
+    background: radial-gradient(circle, rgba(47,232,233,1) 0%, rgba(138,164,241,1) 67%);
     display: flex;
     flex-direction:column;
     justify-content: center;
     align-items: center;
     /* width: 350px; */
 }
-.card:hover{
-   
-    /* box-shadow: 4px 6px 10px rgb(59, 59, 59); */
-    box-shadow: 3px 3px 6px rgb(97, 97, 97);
-    
+.card:hover{   
+    box-shadow: 4px 6px 10px rgb(134, 134, 134);
 }
 
 .flag {
@@ -32,7 +31,7 @@
 }
 
 .detail {
-    font-family: cursive;
+    font-family: 'Maler';
     /* width: 350px; */
     display: flex;
     justify-content:center;
@@ -45,7 +44,8 @@
     margin-right: 10px;
 }
 .link{
-    color: rgb(173, 247, 243);
+    color: rgb(177, 3, 162);
+    /* color: rgb(173, 247, 243); */
 }
 /* esto es de la tarea del clima
 
