--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,15 @@
 .App {
   text-align: center;
+  
+}
+html{
+  font-size: 62.5%;
+}
+body {
+  font-size: 16px;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +42,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
