--- a/client/src/styleComponents/Card.module.css
+++ b/client/src/styleComponents/Card.module.css
@@ -25,8 +25,8 @@
 
 .flag {
     border: 1px solid rgb(61, 61, 61);
-    width: 200px;
-    height: 100px;
+    width: 20rem;
+    height: 10rem;
 }
 
 .detail {
