--- a/client/src/styleComponents/Home.module.css
+++ b/client/src/styleComponents/Home.module.css
@@ -5,14 +5,17 @@
   
     /* background: rgb(47,232,233);
     background: radial-gradient(circle, rgba(47,232,233,1) 0%, rgba(138,164,241,1) 67%); */
-    background: rgb(52,49,54);
-    background: radial-gradient(circle, rgba(52,49,54,1) 0%, rgba(0,0,8,1) 100%);
+    background-color: rgb(52,49,54);
+    background-color: radial-gradient(circle, rgba(52,49,54,1) 0%, rgba(0,0,8,1) 100%);
 
     
-    background-size: contain;
-    background-position: center center;
+    /* background-size: contain;
+    background-position: center center; */
     
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    height: 100%;
+    width: 100%;
+
 
     
 }
