--- a/client/src/styleComponents/Menu.module.css
+++ b/client/src/styleComponents/Menu.module.css
@@ -9,7 +9,8 @@
     background: rgb(19,94,233);
     background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
 
-    height: 40px;
+    height: 4rem;
+    width: 100%;
    padding: 10px;
    display: flex;
    justify-content: center;
