--- a/client/src/styleComponents/NavBar.module.css
+++ b/client/src/styleComponents/NavBar.module.css
@@ -7,10 +7,11 @@
 
 .cont{
     background: rgb(19,94,233);
-    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
+    background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, #0632e2ef 100%);
 
-    height: 40px;
-   padding: 10px;
+    height: 4rem;
+    width: 100%;
+   padding: 1rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
@@ -20,25 +21,28 @@
 .title{
     color: rgb(173, 247, 243);
     font-family: 'Maler';
+    font-size: 1.8rem;
+    font-weight: 900;
+
 }
 
 .input{
-   width: 350px;
-   height: 25px;
+   width: 25rem;
+   height: 2.5rem;
    border-radius: 5px;
    
 
 }
 .btn{
     font-family: cursive;
-    font-size: 17px;
+    font-size: 1.5rem;
     border-radius: 5px;
     background: rgb(19,94,233);
     background: radial-gradient(circle, rgba(19,94,233,0.962877030162413) 44%, rgba(6,50,226,0.9360119047619048) 100%);
 
     color: black;
-    width: 100px;
-    height: 30px;
+    width: 8rem;
+    height: 3rem;
 
     font-weight: 700;
     border-block-end-width: 3px;
@@ -80,7 +84,7 @@ background: radial-gradient(circle, rgba(52,49,54,1) 0%, rgba(0,0,8,1) 100%);
 .link{
     color: rgb(173, 247, 243);
     font-family: 'Maler';
-    font-size: 25px;
+    font-size: 1.5rem;
     font-weight: 900;
     
 } 
